<resources>
    <string name="app_name">География</string>
    <string name="btn_Edu">Приступить к обучению</string>
    <string name="chapter1_atmos">Атмосфера</string>
    <string name="chapter2_gidro">Гидросфера</string>
    <string name="chapter3_bio">Биосфера</string>
    <string name="chapter4_eatrh">Земля во Вселенной</string>
    <string name="topics">Темы</string>
    <string name="tests">Тесты</string>
    <string name="donate">Доп.Темы</string>
    <string name="Paragraph1_1">Атмосфера – это газовая оболочка, которая окружает нашу планету и вращается вместе с Землей. Ее изучением занимаются разделы химии и физики, объединенные общи названием —  физикой атмосферы. При помощи атмосферы определяется погода на поверхности Земли, а изучением погодных условий занимается метеорология, вариациями климата — климатология. Толщина оболочки составляет 1500 км от поверхности планеты.

Строение атмосферы
Физическое состояние определяется климатом и погодой. Основные атмосферные параметры: давление, плотность воздуха, состав и температура. Когда увеличивается высота, то атмосферное давление и плотность воздуха уменьшаются. Также с высотой изменяется и температура. Вертикальное строение газовой оболочки характеризуется разными электрическими и температурными свойствами, разнообразным состоянием воздуха.
</string>
    <string name="title_activity_atmosphere_scroll">Atmosphere_scroll</string>
    <string name="large_text">
        Атмосферное давление
В атмосфере также действует атмосферное давление. Оно оказывает влияние на все предметы, находящиеся в нем и на поверхность планеты. Нормальное атмосферное давление не превышает показатель 760 мм рт. ст. С повышением высоты давление падает на 100 мм с каждым километром.

Состав атмосферы
Атмосфера это воздушная оболочка, которая преимущественно состоит из газов и примесей, таких как капли воды, кристаллы льда, пыль, продукты горения и морские соли. Их количество непостоянно. Основные составляющие атмосферы — азот (78 %), кислород (21 %), аргон (0,93 %). Кроме них в ней содержатся углеводороды, СН4, NH3, SO2, СО, HF, НС1, пары I2, Hg и NO. В тропосфере много аэрозоль (жидких частиц) и взвешенных твердых.

    </string>
    <string name="action_settings">Settings</string>


</resources>