<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Topics_Menu"
    android:background="@drawable/choose_topics2">

    <Button
        android:id="@+id/topicmenu_btn3"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/blocked"
        android:drawableRight="@drawable/lock_32px"
        android:drawableLeft="@drawable/lock_32px"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/chapter4_eatrh"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topicmenu_btn2"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/topicmenu_btn"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/blocked"
        android:drawableRight="@drawable/lock_32px"
        android:drawableLeft="@drawable/lock_32px"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/chapter2_gidro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topicmenu_btn1"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/topicmenu_btn2"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/blocked"
        android:drawableRight="@drawable/lock_32px"
        android:drawableLeft="@drawable/lock_32px"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/chapter3_bio"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topicmenu_btn"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/topicmenu_btn1"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:backgroundTint="#3D9BFF"
        android:drawableEnd="@drawable/star_white"
        android:fontFamily="@font/montserrat_bold"
        android:onClick="topic_atmos"
        android:text="@string/chapter1_atmos"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />
</androidx.constraintlayout.widget.ConstraintLayout>